# Multi-Turn-AssetOps-Evaluation

./: .env.example  .gitignore  METRICS.md  METRICS.zh.md  README.md  main.py  pyproject.toml  requirements.txt  schema_compliance_schema.yaml
data/: DESIGN.md  DESIGN_annotated.md
data/model_a/: dialog1.jsonl  dialog10.jsonl  dialog11.jsonl  dialog12.jsonl  dialog13.jsonl  dialog14.jsonl  dialog15.jsonl  dialog16.jsonl  dialog2.jsonl  dialog3.jsonl  dialog4.jsonl  dialog5.jsonl  dialog6.jsonl  dialog7.jsonl  dialog8.jsonl  dialog9.jsonl
data/model_b/: dialog1.jsonl  dialog10.jsonl  dialog11.jsonl  dialog12.jsonl  dialog13.jsonl  dialog14.jsonl  dialog15.jsonl  dialog16.jsonl  dialog3.jsonl  dialog4.jsonl  dialog5.jsonl  dialog6.jsonl  dialog7.jsonl  dialog8.jsonl  dialog9.jsonl
evaluation_system/: __init__.py  cli.py
evaluation_system/adapters/: __init__.py  base.py  event_stream.py  example.py  normalize.py  qa_history_rollout.py  registry.py
evaluation_system/evaluators/: __init__.py
evaluation_system/evaluators/automatic/: __init__.py  pipeline.py  schema_compliance.py
evaluation_system/evaluators/human_annotation/: __init__.py  annotation.py
evaluation_system/evaluators/llm_judge/: __init__.py  apply.py  config.py  judge.py  parser.py  prompt.py  runner.py  (+1 more)
evaluation_system/io/: __init__.py  design_md.py  file_ops.py
evaluation_system/leaderboard/: __init__.py  figures.py  table.py
evaluation_system/metrics/: __init__.py  aggregation.py
evaluation_system/models/: __init__.py  dialog.py  enums.py
scripts/: finetune_judge.py  parse_design_md.py
